authorization, registration, homepage, moviepage, filtration, content

--- a/src/elements/CarouselBoard/style.module.scss
+++ b/src/elements/CarouselBoard/style.module.scss
@@ -9,6 +9,7 @@
 
 .contentArea {
     background-color: $secondary-color;
+    background-size: cover;
     padding: 10rem;
     z-index: 10;
     width: 100%;
