--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,7 @@
 $background-color: #262425;
 $primary-color: #F9F1E4;
 $secondary-color: #737373;
+$grey-color: #B0A9A0;
+$light-grey-color: #D9D9D9;
+$dark-grey-color: #5B5B5B;
+$the-grey-color: #393939;
