--- a/src/pages/LoginPage/style.module.scss
+++ b/src/pages/LoginPage/style.module.scss
@@ -1,14 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.page {
+    display: flex;
+}
+
 .body {
     background-color: rgb(38, 36, 37);
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: 40vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 2rem;
     font-family: "Poppins", sans-serif;
+}
+
+.image {
+    width: 60vw;
+    height: auto;
+    object-fit: cover;
+
 }
 
 .text {
@@ -26,7 +37,8 @@
     width: 20rem;
     height: 5.5rem;
     background-size: contain;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
+    // margin-top: 1rem;
 }
 
 .darkInput {
@@ -49,16 +61,17 @@
 }
 
 .button {
-    background-color: #F9F1E4 !important;
+    background-color: #800020 !important;
     width: 100%;
     border-radius: 0 !important;
     padding: 1rem !important;
     margin: 1rem 0;
+    color: #F9F1E4 !important;
 
-    &:hover {
-        background-color: #936133 !important;
-        color: #F9F1E4 !important;
-    }
+    // &:hover {
+    //     background-color: #936133 !important;
+    //     color: #F9F1E4 !important;
+    // }
 }
 
 
@@ -99,7 +112,7 @@
         color: #F9F1E4;
 
         &:hover {
-            color: #936133;
+            color: #800020;
             cursor: pointer;
             text-decoration: underline;
         }
