--- a/src/elements/CarouselBoard/style.module.scss
+++ b/src/elements/CarouselBoard/style.module.scss
@@ -20,10 +20,13 @@
 .filmDuration {
     margin: 0;
     color:$primary-color;
+    text-align: left;
 }
 
 .filmTitle {
     margin: 0 0 1rem 0;
+    text-align: left;
+    color:$primary-color;
 }
 
 .filmInfo {
@@ -52,6 +55,7 @@
 .filmContext {
     width: 30rem;
     color:$primary-color;
+    text-align: left;
 }
 
 .buttonWatch {
