--- a/src/elements/SearchBar/style.module.scss
+++ b/src/elements/SearchBar/style.module.scss
@@ -8,11 +8,11 @@
 }
 
 .searchBar_input {
-    background-color: #393939;
+    background-color: #393939 !important;
     color: white;
-    border: 2px solid transparent;
-    border-top-right-radius: 26px;
-    border-bottom-right-radius: 26px;
+    border: 2px solid transparent !important;
+    border-top-right-radius: 26px !important;
+    border-bottom-right-radius: 26px !important;
     font-weight: 500;
     font-family: Poppins, sans-serif;
     line-height: 21px;
@@ -20,9 +20,11 @@
 }
 
 .searchBar_button {
-    background-color: #393939;
+    background-color: #393939 !important;
     border: 2px solid transparent;
-    border-top-left-radius: 26px;
-    border-bottom-left-radius: 26px;
-    margin-left: 5px;
+    border-top-left-radius: 26px !important;
+    border-bottom-left-radius: 26px !important;
+    margin-left: 5px !important;
+    margin-right: -5px !important;
+    padding-left:2px !important;
 }
