--- a/src/pages/LoginPage/style.module.scss
+++ b/src/pages/LoginPage/style.module.scss
@@ -22,9 +22,16 @@
 
 }
 
+.textMain{
+    text-align: center;
+}
+
 .text {
     color: #F9F1E4;
-    text-align: center;
+    text-align: left;
+}
+.textLast{
+    font-size: 14px;;
 }
 
 .netflix {
@@ -33,10 +40,10 @@
 }
 
 .netflixLogo {
-    background-image: url("../../../public/netflix.png");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png");
     width: 20rem;
     height: 5.5rem;
-    background-size: contain;
+    background-size: cover;
     margin-bottom: 1rem;
     // margin-top: 1rem;
 }
