--- a/src/pages/PlanPage/style.module.scss
+++ b/src/pages/PlanPage/style.module.scss
@@ -2,6 +2,7 @@
     width: 90vw;
     font-family: Poppins, sans-serif;
     font-size: 14px;
+    // padding:1rem 0;
 }
 
 .arrowBack {
@@ -12,6 +13,7 @@
     &:hover {
         color: #936133;
     }
+
 }
 
 .title {
@@ -19,8 +21,8 @@
     text-align: left;
     color: #F9F1E4;
     font-size: 32px;
-    margin-top: 1.4rem;
-    margin-bottom: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     width: 672px;
 }
 
@@ -43,6 +45,8 @@
     font-weight: 400;
     padding: 0.25rem;
     margin: 0;
+    text-align: left;
+
 }
 
 .colTitle {
