--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,4 +5,5 @@ $grey-color: #B0A9A0;
 $light-grey-color: #D9D9D9;
 $dark-grey-color: #5B5B5B;
 $the-grey-color: #393939;
-$colorPrimary:red;
+$colorPrimary:#800020;
+$colorPrimaryLight:#930b2d;
