--- a/src/elements/BuyButton/style.module.scss
+++ b/src/elements/BuyButton/style.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .button {
     border: none;
     border-radius: 20rem;
@@ -7,7 +9,7 @@
     cursor: pointer;
 
     &:hover {
-        background-color: #936133;
+        background-color: $colorPrimary;
         color:white;
     }
 }
