--- a/src/elements/BuyButtonThx/style.module.scss
+++ b/src/elements/BuyButtonThx/style.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .button {
     background-color: #262425;
     color: #F9F1E4;
@@ -8,7 +10,7 @@
     margin-top: 0.5rem;
     cursor: pointer;
     &:hover {
-        background-color: #936133;
+        background-color: $colorPrimary;
     }
 }
 
