--- a/src/pages/PlanPage/style.module.scss
+++ b/src/pages/PlanPage/style.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .container {
     width: 90vw;
     font-family: Poppins, sans-serif;
@@ -11,7 +13,7 @@
     color: #F9F1E4;
     cursor: pointer;
     &:hover {
-        color: #936133;
+        color: $colorPrimary;
     }
 
 }
